[package]
name = "grok_ls"
version = "0.1.0"
authors = ["Anton D. Stavinsky <stavinsky@gmail.com>"]
edition = "2018"


[dependencies]
grok = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
# toml = "0.5"
# clap = "2.33.0"
# hashbrown = { version = "0.3", features = ["serde"] }
# eval = "^0.4"
regex = "1"
parking_lot = {version = "0.8" }
nom = "5.0.0-beta2"
